# apps/api/src/auth/dto/sign-in.dto.ts
@@ -1,0 +1,20 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { IsString, IsNotEmpty, IsEmail } from 'class-validator';
+
+export class SignInDto {
+  @ApiProperty({
+    description: 'The email of the user',
+    example: 'test@example.com',
+  })
+  @IsEmail()
+  @IsNotEmpty()
+  email: string;
+
+  @ApiProperty({
+    description: 'The password of the user',
+    example: 'password',
+  })
+  @IsString()
+  @IsNotEmpty()
+  password: string;
+}
