# apps/api/swagger.json
@@ -223,6 +223,16 @@
       "post": {
         "operationId": "AuthController_signIn",
         "parameters": [],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/SignInDto"
+              }
+            }
+          }
+        },
         "responses": {
           "200": {
             "description": "",
@@ -511,8 +521,7 @@
         },
         "required": [
           "email",
-          "password",
-          "name"
+          "password"
         ]
       },
       "User": {
@@ -542,6 +551,25 @@
           "password",
           "createdAt",
           "updatedAt"
+        ]
+      },
+      "SignInDto": {
+        "type": "object",
+        "properties": {
+          "email": {
+            "type": "string",
+            "description": "The email of the user",
+            "example": "test@example.com"
+          },
+          "password": {
+            "type": "string",
+            "description": "The password of the user",
+            "example": "password"
+          }
+        },
+        "required": [
+          "email",
+          "password"
         ]
       },
       "UpdateUserDto": {
